--- a/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
+++ b/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </button>
   <div [ngClass]="toggleNavbarShow()" id="navbarTogglerDemo01">
     <a class="navbar-brand" routerLink="/">
-      T&T V2
+      Boost
     </a>
     <ul class="navbar-nav mr-auto pt-1">
       <li class="nav-item" *ngFor="let m of menu" (click)="click(m);m.selected=true;">
