--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -4,7 +4,7 @@
     <table class="table table-striped table-sm">
       <thead>
       <tr  class="bg-secondary text-white">
-        <th scope="col">
+        <!--<th scope="col">
           <small>#</small>
         </th>
         <th scope="col">
@@ -19,6 +19,7 @@
         <th scope="col">
           <small>{{'lastModifiedBy' | titlecase }}</small>
         </th>
+        -->
         <th scope="col">
           <small>{{'title' | titlecase }}</small>
         </th>
@@ -36,12 +37,12 @@
       <tbody *ngIf="isLoggedIn() && hasRole('USER') && books && !books.empty">
       <tr
         *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
-        <td>{{book.id}}</td>
+        <!--<td>{{book.id}}</td>
         <td>{{book.createdDate | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
         <td>{{book.lastModifiedDate | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
         <td>{{book.createdBy}}</td>
         <td>{{book.lastModifiedBy}}</td>
-        <td>{{book.title}}</td>
+        --><td>{{book.title}}</td>
         <td>{{book.category}}</td>
         <td>{{book.totalDuration}}</td>
         <td colspan="3">
