--- a/boost-frontend/src/main/web/src/app/image-preview/image-preview.component.html
+++ b/boost-frontend/src/main/web/src/app/image-preview/image-preview.component.html
@@ -1,9 +1,12 @@
 <fieldset>
   <div class="col-lg-12 ">
     <div *ngIf="!imgURL" class="col-lg-12">
-      <svg width="100%" height="100%" style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);" for="cover">
-        <text x="40%" y="50%" fill="#999" style="font-weight: bold;text-align: center;">Cover</text>
-      </svg>
+      <label for="cover" class="btn btn-default">
+        <svg width="100%" height="100%"
+             style="background-color: rgb(243, 243, 243);border:dashed 2px rgb(146, 146, 146);">
+          <text x="40%" y="50%" fill="#999" style="font-weight: bold;text-align: center;">Cover</text>
+        </svg>
+      </label>
     </div>
     <div class="col-lg-12">
       <img [src]="imgURL" *ngIf="imgURL" width="100%" height="100%"/>
@@ -11,7 +14,8 @@
     <div class="col-lg-12">
       <label *ngIf="!loadingCover" class="btn btn-success pull-right" for="cover">Change cover</label>
       <div *ngIf="loadingCover" class="progress">
-        <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
+             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     </div>
   </div>
