still some issue with the cover (update not working)

--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -6,5 +6,7 @@
     <p>{{book.title}}</p>
     <p>{{book.description}}</p>
     <p>{{book.totalDuration}}</p>
+    <app-book-form [editMode]="true" [formVisible]="true" [book]="book"></app-book-form>
+
   </div>
 </div>
