--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -12,7 +12,7 @@
       <div>
         <div class="row">
           <div class="col-lg-4">
-            <app-image-preview (emitter)="setCover($event)"></app-image-preview>
+            <app-image-preview [defaultImage]="bookCopy.cover ? bookCopy.cover.id: null" (emitter)="setCover($event)"></app-image-preview>
           </div>
           <div class="col-lg-8">
               <div class="form-group">
