--- a/boost-frontend/src/main/web/src/app/image-preview/image-preview.component.html
+++ b/boost-frontend/src/main/web/src/app/image-preview/image-preview.component.html
@@ -8,14 +8,13 @@
         </svg>
       </label>
     </div>
-    <div class="col-lg-12" *ngIf="!imgURL && defaultImage" >
+    <label for="cover"  class="col-lg-12" *ngIf="!imgURL && defaultImage" >
       <img [src]="getUrlForDefaultCover(defaultImage)" width="100%" height="100%"/>
-    </div>
-    <div class="col-lg-12">
+    </label>
+    <label for="cover" class="col-lg-12">
       <img [src]="imgURL" *ngIf="imgURL" width="100%" height="100%"/>
-    </div>
+    </label>
     <div class="col-lg-12">
-      <label *ngIf="!loadingCover" class="btn btn-success pull-right" for="cover">Change cover</label>
       <div *ngIf="loadingCover" class="progress">
         <div class="progress-bar-animated progress-bar-striped bg-danger" role="progressbar" style="width: 100%"
              aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
