--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="card-body">
-      <div>
+      <div class="container">
         <div class="row">
           <div class="col-lg-4">
             <app-image-preview [defaultImage]="bookCopy.cover ? bookCopy.cover.id: null" (emitter)="setCover($event)"></app-image-preview>
