--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,14 +1,18 @@
-<div class="row">
+<div class="col-12">
   <div class="container">
-    <button class="btn btn-secondary m-2" (click)="back()">back</button>
-    <div *ngIf="book && !editMode">
-      <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
-      <p>{{book.id}}</p>
-      <p>{{book.title}}</p>
-      <p>{{book.description}}</p>
-      <p>{{book.totalDuration}}</p>
-    </div>
+      <button class="btn btn-secondary m-2" (click)="back()">back</button>
+      <div *ngIf="book && !editMode" class="container ">
+        <div class="row">
+            <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
+            <div class="col-lg-5">
+              <p class="lead" >
+                {{book.title}}
+              </p>
+              <p>{{book.description}}</p>
+            </div>
+          </div>
+        </div>
     <app-book-form *ngIf="editMode && book" [editMode]="editMode" [formVisible]="true" [book]="book"></app-book-form>
-    <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
+      <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
   </div>
 </div>
