--- a/boost-frontend/src/main/web/src/app/error/error.component.html
+++ b/boost-frontend/src/main/web/src/app/error/error.component.html
@@ -1,4 +1,4 @@
-<div class="row col-sm-12 mt-4">
+<div class="col-sm-12 mt-4">
   <div class="container">
     <div class="jumbotron">
       <div class="row">
