--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -27,6 +27,9 @@
                 <label for="bookDescription">Description</label>
                 <textarea class="form-control" id="bookDescription" [(ngModel)]="bookCopy.description"></textarea>
               </div>
+            <div class="form-group">
+              <app-chapters *ngIf="book" [bookId]="bookCopy.id"></app-chapters>
+            </div>
           </div>
         </div>
         <button (click)="saveBookToDB()" class="btn btn-primary pull-right"><i
