--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -28,7 +28,7 @@
                 <textarea class="form-control" id="bookDescription" [(ngModel)]="bookCopy.description"></textarea>
               </div>
             <div class="form-group">
-              <app-chapters *ngIf="book" [bookId]="bookCopy.id"></app-chapters>
+              <app-chapters *ngIf="bookCopy && bookCopy.id" [bookId]="bookCopy.id"></app-chapters>
             </div>
           </div>
         </div>
