--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -3,7 +3,9 @@
       <button class="btn btn-secondary m-2" (click)="back()">back</button>
       <div *ngIf="book && !editMode" class="container ">
         <div class="row">
+          <div class="col-lg-4">
             <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
+          </div>
             <div class="col-lg-8">
               <p class="lead" >
                 {{book.title}}
