--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -32,7 +32,7 @@
             </div>
           </div>
         </div>
-        <button (click)="saveBookToDB()" class="btn btn-primary pull-right"><i
+        <button (click)="saveBookToDB()" class="btn btn-primary pull-right text-uppercase"><i
           class="fa fa-save"></i>&nbsp;Save</button>
       </div>
     </div>
