--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,6 +1,8 @@
 <div class="col-12">
   <div class="container">
-      <button class="btn btn-secondary m-2" (click)="back()">back</button>
+    <div class="col-12">
+      <button class="btn btn-secondary m-2 text-uppercase" (click)="back()"><i class="fa fa-arrow-left"></i>&nbsp;Back</button>
+    </div>
       <div *ngIf="book && !editMode" class="container ">
         <div class="row">
           <div class="col-lg-4">
