--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -20,6 +20,10 @@
                 <input type="text" class="form-control" id="bookTitle" [(ngModel)]="bookCopy.title">
               </div>
               <div class="form-group">
+                <label for="bookAuthor">Author</label>
+                <input type="text" class="form-control" id="bookAuthor" [(ngModel)]="bookCopy.author">
+              </div>
+              <div class="form-group">
                 <label for="bookCategory">Category</label>
                 <input type="text" class="form-control" id="bookCategory" [(ngModel)]="bookCopy.category">
               </div>
