--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,20 +1,21 @@
-<div class="col-12">
-  <div class="container">
+<div class="container">
       <button class="btn btn-sm btn-secondary m-2 text-uppercase" (click)="back()"><i class="fa fa-arrow-left"></i></button>
-      <div *ngIf="book && !editMode" class="container ">
-        <div class="row">
+      <div *ngIf="book && !editMode">
+        <div class="d-flex">
+          <div class="col-2 p-2 offset-1">
             <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id"></app-image-loader>
+          </div>
             <div class="col-lg-8">
               <p class="lead" >
                 {{book.title}}<small class="text-muted"> by {{book.author}}</small>
 
               </p>
               <p>{{book.description}}</p>
-              <hr>
-              <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
             </div>
+        </div>
+        <div class="col-12">
+            <app-chapters *ngIf="book" [bookId]="book.id"></app-chapters>
           </div>
         </div>
     <app-book-form [showCross]="false" *ngIf="editMode && book" [editMode]="editMode" [formVisible]="true" [book]="book"></app-book-form>
-  </div>
 </div>
