--- a/boost-frontend/src/main/web/src/app/image-loader/image-loader.component.html
+++ b/boost-frontend/src/main/web/src/app/image-loader/image-loader.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="">
     <img  class="img-fluid" *ngIf="imageBase64" [src]="imageBase64">
     <div *ngIf="!imageBase64" class="lds-ellipsis">
       <div></div>
