--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-      <button class="btn btn-sm btn-secondary m-2 text-uppercase" (click)="back()"><i class="fa fa-arrow-left"></i></button>
+    <button class="btn btn-sm btn-secondary mb-2 mt-2 align-content-lg-end text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
       <div *ngIf="book && !editMode">
         <div class="row">
           <div class="col-lg-2 p-2 offset-lg-1 col-sm-12">
