--- a/boost-frontend/src/main/web/src/app/unit-search-form/unit-search-form.component.html
+++ b/boost-frontend/src/main/web/src/app/unit-search-form/unit-search-form.component.html
@@ -1,10 +1,10 @@
 <div class=" mb-4">
-  <button class="btn btn-primary btn-sm pull-right" (click)="searchFormVisible=!searchFormVisible"
+  <button class="btn btn-primary btn-sm float-right" (click)="searchFormVisible=!searchFormVisible"
           *ngIf="!searchFormVisible"><i class="fa fa-search"></i></button>
   <div *ngIf="searchFormVisible" class="card">
     <div class="card-header">
       <span>Search</span>
-      <div class="pull-right">
+      <div class="float-right">
         <a class="text-link" href="#" (click)="searchFormVisible=false"><i class="fa fa-times"></i></a>
       </div>
     </div>
