--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -39,7 +39,7 @@
         </td>
       </tr>
       </tbody>
-      <tbody *ngIf="!isLoggedIn() || !books || books.empty ">
+      <tbody *ngIf="!books || books.empty ">
       <tr class="bg-dark">
         <td colspan="11" class="text-white text-center"><strong>No result!</strong></td>
       </tr>
