--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4 ">
-  <app-book-form [editMode]="false" [book]="newBook()"></app-book-form>
+  <app-book-form *ngIf="hasRole('ADMIN')" [editMode]="false" [book]="newBook()"></app-book-form>
   <div class="table-responsive">
     <table class="table table-striped table-sm">
       <thead>
