--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -1,5 +1,5 @@
-<div class=" mb-4">
-  <button class="btn btn-primary btn-sm float-right" (click)="formVisible=!formVisible"
+<div class="">
+  <button class="btn btn-primary btn-sm float-right mb-2" (click)="formVisible=!formVisible"
           *ngIf="!formVisible"><fa-icon [icon]="faPlus"></fa-icon> </button>
   <div *ngIf="formVisible" class="card">
     <div class="card-header">
@@ -14,7 +14,7 @@
           <div class="col-lg-4">
             <app-image-preview [defaultImage]="bookCopy.cover ? bookCopy.cover.id: null" (emitter)="setCover($event)"></app-image-preview>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-8 text-uppercase">
               <div class="form-group">
                 <label for="bookTitle">Title</label>
                 <input type="text" class="form-control" id="bookTitle" [(ngModel)]="bookCopy.title">
