--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -1,20 +1,20 @@
-<div class="container mt-4 ">
+<div class="container mt-2">
   <app-book-form *ngIf="hasRole('ADMIN')" [editMode]="false" [book]="newBook()"></app-book-form>
-  <div class="table-responsive">
-    <table class="table table-striped table-sm">
+  <div class="mt-4 table-responsive">
+    <table class="table table-hover table-light table-sm">
       <thead>
-      <tr  class="bg-secondary text-white">
+      <tr class="bg-light">
         <th scope="col">
-          <small>{{'title' | titlecase }}</small>
+          <small>{{'title' | uppercase }}</small>
         </th>
         <th scope="col">
-          <small>{{'category' | titlecase }}</small>
+          <small>{{'category' | uppercase }}</small>
         </th>
         <th scope="col">
-          <small>{{'totalDuration' | titlecase }}</small>
+          <small>{{'Duration' | uppercase }}</small>
         </th>
         <th scope="col" colspan="3">
-          <small>{{'action' | titlecase }}</small>
+          <small>{{'action' | uppercase }}</small>
         </th>
       </tr>
       </thead>
