--- a/boost-frontend/src/main/web/src/app/books/books.component.html
+++ b/boost-frontend/src/main/web/src/app/books/books.component.html
@@ -1,6 +1,9 @@
 <div class="container mt-2">
-  <app-book-form *ngIf="hasRole('ADMIN')" [editMode]="false" [book]="newBook()"></app-book-form>
-  <div class="mt-4 table-responsive">
+  <div [class]="bookFormVisible?'container':'input-group'">
+    <input type="text"  [class]="'form-control input-sm ' +(bookFormVisible?'mb-2':'mr-2')" placeholder="Search...">
+    <app-book-form (emitter)="bookFormVisible = $event" *ngIf="hasRole('ADMIN')" [editMode]="false" [book]="newBook()"></app-book-form>
+  </div>
+  <div class="mt-2 table-responsive">
     <table class="table table-hover table-light table-sm">
       <thead>
       <tr class="bg-light">
@@ -19,14 +22,8 @@
       </tr>
       </thead>
       <tbody *ngIf="books && !books.empty">
-      <tr
-        *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
-        <!--<td>{{book.id}}</td>
-        <td>{{book.createdDate | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
-        <td>{{book.lastModifiedDate | date: 'dd/MM/yyyy HH:mm:ss'}}</td>
-        <td>{{book.createdBy}}</td>
-        <td>{{book.lastModifiedBy}}</td>
-        --><td>{{book.title}}</td>
+      <tr class="clickable" (click)="navigate(book,'view')" *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
+        <td>{{book.title}}</td>
         <td>{{book.category}}</td>
         <td>{{getTotalDuration(book)}}</td>
         <td colspan="3">
