--- a/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
+++ b/boost-frontend/src/main/web/src/app/books-detail/books-detail.component.html
@@ -1,8 +1,8 @@
 <div class="container">
+  <div class="text-center mb-2 ">
+    <button class="btn btn-sm btn-outline-info mt-2 text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
+  </div>
       <div *ngIf="book && !editMode">
-        <div class="text-center">
-          <button class="btn btn-sm btn-outline-info mt-2 text-uppercase" (click)="back()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
-        </div>
         <div class="clearfix"></div>
         <div class="row">
           <div class="col-lg-2 p-2 offset-lg-1 col-sm-12">
