--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -1,11 +1,11 @@
-<div class="jumbotron mt-4 container">
-  <h1 class="display-4">Boost!</h1>
-  <p class="lead">Welcome to Boost.</p>
-  <hr class="my-4">
-  <p *ngIf="!isLoggedIn()">You must be logged in to continue.</p>
-  <div *ngIf="isLoggedIn()">
-    <p>Welcome {{getUser().username}}!</p>
-    <p>Your access roles are: <span class="badge badge-info mr-1" *ngFor="let role of getUser().authorities">{{role.authority}}</span></p>
-  </div>
+<div class="container">
+  <div class="jumbotron bg-transparent text-center">
+    <hr class="my-4">
+    <p *ngIf="!isLoggedIn()">You must be logged in to continue.</p>
+    <div *ngIf="isLoggedIn()">
+      <p>Welcome {{getUser().username}}!</p>
+      <p>Your access roles are: <span class="badge badge-info mr-1" *ngFor="let role of getUser().authorities">{{role.authority}}</span></p>
+    </div>
 
+  </div>
 </div>
