--- a/boost-frontend/src/main/web/src/app/app.component.html
+++ b/boost-frontend/src/main/web/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div>
   <app-navbar></app-navbar>
+  <div class="text-center">
+    <img class="img-responsive mt-5 mb-4" src="/assets/logo.png">
+  </div>
   <div class="routerContent">
     <router-outlet></router-outlet>
   </div>
