--- a/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
+++ b/boost-frontend/src/main/web/src/app/book-form/book-form.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button class="btn btn-primary btn-sm float-right mb-2" (click)="toggleFormVisible()"
+  <button class="btn btn-outline-primary mb-2" (click)="toggleFormVisible()"
           *ngIf="!formVisible"><fa-icon [icon]="faPlus"></fa-icon> </button>
   <div class="span3 clearfix" *ngIf="formVisible" >
     <div class="card">
