--- a/boost-frontend/src/main/web/src/app/login/login.component.html
+++ b/boost-frontend/src/main/web/src/app/login/login.component.html
@@ -9,7 +9,7 @@
   </button>
 </div>
 <div *ngIf="isLoggedIn()" class="form-inline my-2 my-lg-0">
-  <span>Welcome {{getUser().username}}</span>&nbsp;
-  <button class="btn btn-danger text-white my-2 my-sm-0 btn-sm" type="button" (click)="logout()"><fa-icon [icon]="faSignOutAlt"></fa-icon>
+  <button class="btn btn-danger text-white my-2 my-sm-0 " type="button" (click)="logout()"><fa-icon [icon]="faSignOutAlt"></fa-icon>
+    <span>{{getUser().username | uppercase}}</span>&nbsp;
   </button>
 </div>
