--- a/boost-frontend/src/main/web/src/app/navbar/navbar.component.css
+++ b/boost-frontend/src/main/web/src/app/navbar/navbar.component.css
@@ -1,8 +1,3 @@
-a:hover, a:active, a:focus {
-  outline: none;
-  border: 0;
-}
-
-.active{
-  text-decoration: underline #0086B3;
+.bg-grey{
+  background-color: #778899;
 }
