--- a/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
+++ b/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
@@ -1,14 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-grey text-light">
   <button class="navbar-toggler pb-2" type="button" (click)="toggleNavbar()">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div [ngClass]="toggleNavbarShow()" id="navbarTogglerDemo01">
-    <a class="navbar-brand" routerLink="/">
-      Boost!
-    </a>
     <ul class="navbar-nav mr-auto pt-1">
       <li [ngClass]="'nav-item ' +( m.selected ? 'active' :'')" *ngFor="let m of menu" (click)="$event.preventDefault();click(m);m.selected=true;">
-        <a routerLink="{{m.route}}" *ngIf="hasRole(m.role)" class="nav-link">
+        <a routerLink="{{m.route}}" *ngIf="hasRole(m.role)" class="nav-link ">
           <span class="text-uppercase">{{m.label}}</span>
         </a>
       </li>
