--- a/boost-frontend/src/main/web/src/app/home/home.component.html
+++ b/boost-frontend/src/main/web/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="jumbotron bg-transparent text-center">
+  <div class="jumbotron container bg-transparent text-center">
     <hr class="my-4">
     <p *ngIf="!isLoggedIn()">You must be logged in to continue.</p>
     <div *ngIf="isLoggedIn()">
@@ -8,4 +7,3 @@
     </div>
 
   </div>
-</div>
