--- a/boost-frontend/src/main/web/src/app/login/login.component.html
+++ b/boost-frontend/src/main/web/src/app/login/login.component.html
@@ -9,7 +9,8 @@
   </button>
 </div>
 <div *ngIf="isLoggedIn()" class="form-inline my-2 my-lg-0">
-  <button class="btn btn-danger text-white my-2 my-sm-0 " type="button" (click)="logout()"><fa-icon [icon]="faSignOutAlt"></fa-icon>
+  <button class="btn btn-danger text-white my-2 my-sm-0 " type="button" (click)="logout()">
     <span>{{getUser().username | uppercase}}</span>&nbsp;
+    <fa-icon [icon]="faSignOutAlt"></fa-icon>
   </button>
 </div>
