--- a/boost-frontend/src/main/web/src/app/app.component.html
+++ b/boost-frontend/src/main/web/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div>
-  <app-navbar></app-navbar>
+<app-navbar></app-navbar>
+<main role="main" class="flex-shrink-0">
   <div class="text-center">
-    <img class="img-responsive mt-5 mb-2" src="/assets/logo.png">
+    <img class="img-responsive mt-5 py-3 " src="/assets/logo.png">
   </div>
   <div class="routerContent">
     <router-outlet></router-outlet>
   </div>
-</div>
+</main>
